--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="krullmensch.de.mediaplayer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="krullmensch.de.mediaplayer">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,12 +21,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity2"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
-        </activity>
+            android:name=".chartsActivity"
+            android:parentActivityName=".MainActivity"
+            />
     </application>
 
 </manifest>
